# C-project

BigInt/: BigInt.cpp  BigInt.h  CMakeLists.txt  README.md  main.cpp
String-based_IO_operations/: CMakeLists.txt  Word.cpp  Word.h  WordMap.cpp  WordMap.h  Word_set.cpp  Word_set.h  data.txt  main.cpp  myCode.cpp  myCode.h
